# StoreSales

./: .gitignore  LICENSE  LICENSE.txt  Makefile  README.md  Untitled.ipynb  pyproject.toml  setup.py  untitled.txt
.ipynb_checkpoints/: pyproject-checkpoint.toml
docs/: conf.py  index.rst
mlruns/0/: meta.yaml
models/: Model1.py
notebooks/: EDA.ipynb  Untitled.ipynb
src/features/: build_features.py
