[tool.poetry]
name = "store sales"
version = "0.1.0"
description = ""
authors = ["middlepenguin <middlepenguin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
ipykernel = "^6.25.2"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
transformers = "^4.33.2"
flake8 = "^6.1.0"
black = "^23.9.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
